--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
+    "pocketbase": "^0.21.5",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.12.0"
