--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
     "pocketbase": "^0.21.5",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
