--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -20,12 +22,16 @@
     "pocketbase": "^0.21.5",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-safe-area-context": "^4.12.0"
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
