--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
