--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "nativewind": "^2.0.11",
     "pocketbase": "^0.21.5",
     "react": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0"
